<resources>
    <string name="app_name">Easy Trip</string>
    <string name="nfc">NFC</string>
    <string name="choose_login_method">Выберите способ входа</string>
    <string name="hint_card_number">Номер карты</string>
    <string name="profile">Профиль</string>
    <string name="price">Цены</string>
    <string name="personal_profile">Личный кабинет</string>
    <string name="number_badge">№</string>
    <string name="bus">Автобус</string>
    <string name="trolleybus">Троллейбус</string>
    <string name="tram">Трамвай</string>
    <string name="bus_express">Автобус "Экс."</string>
    <string name="metro">Метро</string>
    <string name="train_city_lines">Городские линии</string>
    <string name="many_transport_types">Автобус - трамвай - троллейбус</string>
    <string name="active">Активен</string>
    <string name="not_active">Не активен</string>
    <string name="ends">Заканчивается</string>
    <string name="before">до:</string>
    <string name="trip">поездок</string>
    <string name="days">суток</string>
    <string name="day">сутки</string>
    <string name="left">Осталось</string>
    <string name="validity">Срок действия</string>
    <string name="validity_until">Срок действия до:</string>
    <string name="left_trips">Поездок осталось:</string>
    <string name="number_of_days">выберите тип проездного</string>
    <string name="back">Назад</string>
    <string name="unlimited_trips">Безлимит поездок</string>
    <string name="unlimited_trips_with_train_city">Безлимит поездок включая городские линии</string>
    <string name="number_of_trips">Количество поездок</string>
    <string name="choose_your_transport">Выберите нужный транспорт</string>
    <string name="final_price">Итоговая цена:</string>
    <string name="zero">0</string>
    <string name="double_zero">00</string>
    <string name="rubles">руб.</string>
    <string name="penny">коп.</string>
    <string name="choose_transport_and_trips">Выберите транспорт и \nнужное количество поездок</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="limited_tickets">Лимитированный проездной</string>
    <string name="choose_number_of_days">Выберите количество суток</string>
    <string name="error">Ошибка</string>
    <string name="button_ok">Ок</string>
    <string name="button_try_again">Попробовать снова</string>
    <string name="card_number_cannot_be_empty">Номер карты не может быть пустым!</string>
    <string name="no_card_number">Карты с таким номером не существует!</string>
    <string name="no_card_transactions">Для данного номера карты ничего не приобретено!</string>
    <string name="get_price">Узнать цену</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>