<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="20dp">

    <TextView
        android:id="@+id/choose_transport_and_trip"
        style="@style/TextToUnlimitedOrLimitedPriceStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/choose_transport_and_trips"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.example.tickets.utils.Counter
        android:id="@+id/first_limited_item"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_transport_and_trip"
        app:limitedIcon="@drawable/icon_bus"
        app:limitedItemName="@string/bus" />

    <com.example.tickets.utils.Counter
        android:id="@+id/second_limited_item"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/first_limited_item"
        app:layout_constraintTop_toBottomOf="@+id/choose_transport_and_trip"
        app:limitedIcon="@drawable/icon_trolleybus"
        app:limitedItemName="@string/trolleybus" />

    <com.example.tickets.utils.Counter
        android:id="@+id/third_limited_item"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_limited_item"
        app:limitedIcon="@drawable/icon_tram"
        app:limitedItemName="@string/tram" />

    <com.example.tickets.utils.Counter
        android:id="@+id/four_limited_item"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/third_limited_item"
        app:layout_constraintTop_toBottomOf="@+id/second_limited_item"
        app:limitedIcon="@drawable/icon_express_bus"
        app:limitedItemName="@string/bus_express" />

    <com.example.tickets.utils.Counter
        android:id="@+id/five_limited_item"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/third_limited_item"
        app:limitedIcon="@drawable/icon_metro"
        app:limitedItemName="@string/metro" />


    <TextView
        android:id="@+id/limited_text_final_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/final_price"
        android:textColor="@color/grey"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/five_limited_item" />

    <TextView
        android:id="@+id/limited_count_of_rubles_unlimited_price"
        style="@style/TextToUnlimitedOrLimitedPriceStyle"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="28dp"
        android:text="@string/zero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/limited_text_final_price" />

    <TextView
        android:id="@+id/limited_text_rubles"
        style="@style/TextToUnlimitedOrLimitedPriceStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="28dp"
        android:text="@string/rubles"
        app:layout_constraintStart_toEndOf="@+id/limited_count_of_rubles_unlimited_price"
        app:layout_constraintTop_toBottomOf="@+id/limited_text_final_price" />

    <TextView
        android:id="@+id/limited_count_of_penny_unlimited_price"
        style="@style/TextToUnlimitedOrLimitedPriceStyle"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="28dp"
        android:text="@string/double_zero"
        app:layout_constraintStart_toEndOf="@+id/limited_text_rubles"
        app:layout_constraintTop_toBottomOf="@+id/limited_text_final_price" />

    <TextView
        android:id="@+id/limited_text_penny"
        style="@style/TextToUnlimitedOrLimitedPriceStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="28dp"
        android:text="@string/penny"
        app:layout_constraintStart_toEndOf="@+id/limited_count_of_penny_unlimited_price"
        app:layout_constraintTop_toBottomOf="@+id/limited_text_final_price" />


</androidx.constraintlayout.widget.ConstraintLayout>