<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="20dp">

    <View
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/universal_form"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_button"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:backgroundTint="@color/white"
        android:padding="0dp"
        android:text="@string/back"
        android:textColor="@color/black"
        app:icon="@drawable/icon_arrow_back"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/number_of_days_in_unlimited_choose_screen"
        style="@style/TextToolbarStyle"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="30"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.437" />

    <TextView
        android:id="@+id/text_days"
        style="@style/TextToolbarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/days"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toEndOf="@+id/number_of_days_in_unlimited_choose_screen"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.437" />

    <TextView
        android:id="@+id/choose_your_transport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/choose_your_transport"
        style="@style/TextToUnlimitedOrLimitedPriceStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/unlimited_transport_list"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_your_transport" />

    <TextView
        android:id="@+id/text_final_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/final_price"
        android:textColor="@color/grey"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unlimited_transport_list" />

    <TextView
        android:id="@+id/count_of_rubles_unlimited_price"
        style="@style/TextToUnlimitedOrLimitedPriceStyle"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="28dp"
        android:text="@string/zero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_final_price" />

    <TextView
        android:id="@+id/text_rubles"
        style="@style/TextToUnlimitedOrLimitedPriceStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="28dp"
        android:text="@string/rubles"
        app:layout_constraintStart_toEndOf="@+id/count_of_rubles_unlimited_price"
        app:layout_constraintTop_toBottomOf="@+id/text_final_price" />

    <TextView
        android:id="@+id/count_of_penny_unlimited_price"
        style="@style/TextToUnlimitedOrLimitedPriceStyle"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="28dp"
        android:text="@string/double_zero"
        app:layout_constraintStart_toEndOf="@+id/text_rubles"
        app:layout_constraintTop_toBottomOf="@+id/text_final_price" />

    <TextView
        android:id="@+id/text_penny"
        style="@style/TextToUnlimitedOrLimitedPriceStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="28dp"
        android:text="@string/penny"
        app:layout_constraintStart_toEndOf="@+id/count_of_penny_unlimited_price"
        app:layout_constraintTop_toBottomOf="@+id/text_final_price" />

</androidx.constraintlayout.widget.ConstraintLayout>