<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="@dimen/_8mdp">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/minsk_city"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_125mdp"
        android:layout_marginTop="76dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/minsk_city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="@dimen/_20mdp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/number_of_days_text"
        style="@style/TextInPriceScreenStyle"
        android:layout_marginTop="@dimen/_31mdp"
        android:text="@string/number_of_days"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minsk_city" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/unlimited_trips_button"
        android:layout_width="@dimen/_190mdp"
        android:layout_height="@dimen/_65mdp"
        android:layout_marginTop="@dimen/_8mdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_of_days_text"
        app:lottie_autoPlay="false"
        app:lottie_fileName="price_button.json"
        app:lottie_loop="true" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/unlimited_trips_button_with_train_city"
        android:layout_width="@dimen/_190mdp"
        android:layout_height="@dimen/_65mdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unlimited_trips_button"
        app:lottie_autoPlay="false"
        app:lottie_fileName="price_button.json"
        app:lottie_loop="true" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/limited_trips_button"
        android:layout_width="@dimen/_190mdp"
        android:layout_height="@dimen/_65mdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unlimited_trips_button_with_train_city"
        app:lottie_autoPlay="false"
        app:lottie_fileName="price_button.json"
        app:lottie_loop="true" />

    <TextView
        style="@style/TextForButtonInPriceFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_trips"
        app:layout_constraintBottom_toBottomOf="@+id/limited_trips_button"
        app:layout_constraintEnd_toEndOf="@+id/limited_trips_button"
        app:layout_constraintStart_toStartOf="@+id/limited_trips_button"
        app:layout_constraintTop_toTopOf="@+id/limited_trips_button" />

    <TextView
        style="@style/TextForButtonInPriceFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unlimited_trips"
        app:layout_constraintBottom_toBottomOf="@+id/unlimited_trips_button"
        app:layout_constraintEnd_toEndOf="@+id/unlimited_trips_button"
        app:layout_constraintStart_toStartOf="@+id/unlimited_trips_button"
        app:layout_constraintTop_toTopOf="@+id/unlimited_trips_button" />

    <TextView
        style="@style/TextForButtonInPriceFragment"
        android:layout_width="@dimen/_150mdp"
        android:layout_height="wrap_content"
        android:text="@string/unlimited_trips_with_train_city"
        app:layout_constraintBottom_toBottomOf="@+id/unlimited_trips_button_with_train_city"
        app:layout_constraintEnd_toEndOf="@+id/unlimited_trips_button_with_train_city"
        app:layout_constraintStart_toStartOf="@+id/unlimited_trips_button_with_train_city"
        app:layout_constraintTop_toTopOf="@+id/unlimited_trips_button_with_train_city" />


</androidx.constraintlayout.widget.ConstraintLayout>