<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background">

    <androidx.cardview.widget.CardView
        android:id="@+id/form_transport_info_item_140"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/transport_name_140"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/pixograd_medium"
                android:text="@string/bus_express"
                android:textAlignment="center"
                android:textColor="@color/purple"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/transport_icon_140"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/icon_express_bus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/transport_name_140"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/status_image_140"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="22dp"
                android:src="@drawable/icon_circle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/transport_icon_140"
                app:tint="@color/orange"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/status_text_140"
                style="@style/TextInTransportInfoItemStyle"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/smart_gothic_bold"
                android:text="@string/ends"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.075"
                app:layout_constraintStart_toEndOf="@+id/status_image_140"
                app:layout_constraintTop_toBottomOf="@+id/transport_icon_140" />

            <TextView
                android:id="@+id/validity_140"
                style="@style/TextInTransportInfoItemStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="16dp"
                android:text="@string/validity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/status_image_140" />

            <TextView
                android:id="@+id/number_of_trip_140"
                style="@style/TextInTransportInfoItemStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:text="45"
                android:visibility="invisible"
                app:layout_constraintStart_toEndOf="@+id/validity_140"
                app:layout_constraintTop_toBottomOf="@+id/status_text_140" />

            <TextView
                android:id="@+id/trip_140"
                style="@style/TextInTransportInfoItemStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:text="@string/trip"
                android:visibility="invisible"
                app:layout_constraintStart_toEndOf="@+id/number_of_trip_140"
                app:layout_constraintTop_toBottomOf="@+id/status_text_140" />

            <TextView
                android:id="@+id/before_140"
                style="@style/TextInTransportInfoItemStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="10dp"
                android:text="@string/before"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/validity_140" />

            <TextView
                android:id="@+id/finish_data_140"
                style="@style/TextInTransportInfoItemStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="21.05.2021"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.037"
                app:layout_constraintStart_toEndOf="@+id/before_140"
                app:layout_constraintTop_toBottomOf="@+id/validity_140" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>